--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,17 @@
     <string name="app_name">NailPolishDB</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
-    <string name="button_addnew">Add new Nailpolish</string>
+    <string name="button_addnew">Add</string>
     <string name="button_viewdatabase">View Nail Polish Database</string>
     <string name="button_search">Search</string>
     <string name="button_about">About</string>
     <string name="image_mainactivity">Image Main Activity</string>
     <string name="action_settings">Settings</string>
+    <string name="text_Brand">Brand</string>
+    <string name="button_addbrand">Add new brand</string>
+    <string name="button_addnailpolish">Add new nailpolish</string>
+    <string name="text_Name">Name</string>
+    <string name="text_ID">ID</string>
+    <string name="text_collection">Collection</string>
+    <string name="button_addpolish2db">Add nailpolish to database</string>
 </resources>
