--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="color_prompt">Choose a color</string>
     <string name="finish_prompt">Choose a finish</string>
     <string name="title_settings">Settings</string>
+    <string name="title_viewdb">Nail Polish Database</string>
 
     <string-array name="npcolor_arrays">
         <item>Red</item>
