--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="toolbar_search">Search</string>
     <string name="switch_designcolor">Change Design Light/Dark</string>
     <string name="settings_npcount">Nail Polishes in Database</string>
+    <string name="Details">Details</string>
 
     <string-array name="npcolor_arrays">
         <item>Red</item>
