--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="switch_designcolor">Change Design Light/Dark</string>
     <string name="settings_npcount">Nail Polishes in Database</string>
     <string name="Details">Details</string>
+    <string name="Color">Color</string>
 
     <string-array name="npcolor_arrays">
         <item>Red</item>
