--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,11 @@
     <string name="button_viewdatabase">View Nail Polish Database</string>
     <string name="image_mainactivity">Image Main Activity</string>
     <string name="action_settings">Settings</string>
-    <string name="text_Brand">Brand</string>
+    <string name="text_Brand">Brand:</string>
     <string name="button_addnailpolish">Add new nailpolish</string>
-    <string name="text_Name">Name</string>
-    <string name="text_ID">ID</string>
-    <string name="text_collection">Collection</string>
+    <string name="text_Name">Name:</string>
+    <string name="text_ID">ID:</string>
+    <string name="text_collection">Collection:</string>
     <string name="button_addpolish2db">Add nailpolish to database</string>
     <string name="color_prompt">Choose a color</string>
     <string name="finish_prompt">Choose a finish</string>
@@ -20,7 +20,8 @@
     <string name="switch_designcolor">Change Design Light/Dark</string>
     <string name="settings_npcount">Nail Polishes in Database</string>
     <string name="Details">Details</string>
-    <string name="Color">Color</string>
+    <string name="Color">Color:</string>
+    <string name="Text_Finish">Finish:</string>
 
     <string-array name="npcolor_arrays">
         <item>Red</item>
