--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="alert_delete_title">Delete record?</string>
     <string name="text_cancel">Cancel</string>
     <string name="alert_delete_message">Really want to delete this record?</string>
+    <string name="activity_details_title">Nail Polish Details</string>
 </resources>
