--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,9 +47,9 @@
     <string name="edittext_hint_color">Color</string>
     <string name="edittext_hint_finish">Finish</string>
     <string name="toolbar_title_edit">Edit Nail Polish</string>
-    <string name="button_save_edits">Save</string>
     <string name="toolbar_title_settings">Settings</string>
     <string name="menu_item_settings">Settings</string>
     <string name="alert_button_cancel">Cancel</string>
     <string name="preference_title_npcount">Nail Polishes in Database</string>
+    <string name="button_save_changes">Save Changes</string>
 </resources>
